<resources>
    <string name="app_name">KMITL Mobile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_More">More</string>
    <string name="title_Map">Map</string>
    <string name="title_Event">Event</string>
    <string name="title_Calendar">Calendar</string>
    <string name="title_Feed">Feed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Feed_Fragment">Feed Fragment</string>
    <string name="more_fragment">More Fragment</string>
    <string name="Map_Fragment">Map Fragment</string>
    <string name="Calendar_fragment">Calendar Fragment</string>
    <string name="Event_fragment">Event Fragment</string>

	<string name="_2561">ประกาศรับสมัครนักศึกษาระดับปริญญาตรี ประจำปีการศึกษา 2561</string>
    <string name="textNews2">นักศึกษาคณะเทคโนโลยีสารสนเทศ สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง คว้ารางวัลรองชนะเลิศอันดับหนึ่ง</string>
    <string name="national_software_contest_2017">รองชนะเลิศอันดับสอง National Software Contest 2017</string>
    <string name="_1st_prize_winner_aware_technology_competition_award_2016">รางวัลชนะเลิศ 1st Prize Winner จากการแข่งขัน Aware Technology Competition Award 2016</string>
    <string name="news5Content">ประกาศสมัครทุน กยศ.</string>
    <string name="news6Content">ประกาศรายชื่อนักศึกษาหมดสิธทิ์สอบ</string>
    <string name="news1Detail">ประกาศรับสมัครนักศึกษาระดับปริญญาตรี ประจำปีการศึกษา 2561\n\n
        คณะวิศวะ วันที่ 27 ตุลาคม 2561 ถึง 26 พฤศจิกายน 2561\n\n
        คณะเทคโนโลยีสารสนเทศ 28 ตุลาคม 2561 ถึง 27 พฤศจิกายน 2561\n\n
        คณะสถาปัตยกรรม 28 ตุลาคม 2561 ถึง 27 พฤศจิกายน 2561\n\n
        คณะครุศาสตร์อุตสาหกรรม 28 ตุลาคม 2561 ถึง 27 พฤศจิกายน 2561\n\n
        คณะนาโนเทคโนโลยี 28 ตุลาคม 2561 ถึง 27 พฤศจิกายน 2561\n\n
        คณะการบริหารและการจัดการ 28 ตุลาคม 2561 ถึง 27 พฤศจิกายน 2561\n\n
        คณะเกษตรกรรม 30 ตุลาคม 2561 ถึง 29 พฤศจิกายน 2561\n\n
        คณะวิทยาศาตร์ 30 ตุลาคม 2561 ถึง 29 พฤศจิกายน 2561\n\n
        คณะเทคโนโลยีสารสนเทศหลักสูตรนานาชาติ 31 ตุลาคม 2561 ถึง 30 พฤศจิกายน 2561</string>
    <string name="news2detail">นักศึกษาคณะเทคโนโลยีสารสนเทศ สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง คว้ารางวัลรองชนะเลิศอันดับหนึ่ง จากการประกวดการสร้างสื่ออิเล็กทรอนิกส์มาตรฐาน EPUB3 ครั้งที่ 1 ที่จัดขึ้นโดยสถาบันเทคโนโลยีเพื่อคนพิการและผู้สูงอายุ ศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติ (NECTEC) ณ บ้านวิทยาศาสตร์สิรินธร โดยมีวัตถุประสงค์เพื่อส่งเสริมการสร้างหนังสือที่ทุกคนเข้าถึงและใช้ประโยชน์ได้ โดยการพัฒนาบุคลากรทางการศึกษา ให้มีความรู้ความเข้าใจในการสร้างหนังสือ/สื่ออิเล็กทรอนิกส์ที่ทุกคนเข้าถึงและใช้ประโยชน์ได้ และเพื่อส่งเสริมการบูรณาการการเรียนรู้โดยนำหนังสือที่ทุกคนเข้าถึงและใช้ประโยชน์ได้นี้ไปใช้ในการเรียนการสอนในโรงเรียนเรียนรวมของสำนักงานคณะกรรมการการศึกษาขั้นพื้นฐาน เมื่อวันที่ 31 พฤษภาคม 2560 \n\n
        โดยงานในครั้งนี้ทีมนักศึกษาคณะไอทีลาดกระบัง ได้คว้ารางวัลรองชนะเลิศอันดับ 1 ในการประกวดการสร้างสื่ออิเล็กทรอนิกส์มาตรฐาน EPUB3 สำหรับนักเรียนระดับชั้นมัธยมศึกษาตอนปลาย ในรายวิชาวิทยาศาสตร์ เรื่อง โลก โดยมีเนื้อหาเกี่ยวกับโครงสร้างโลก โลกและการเปลี่ยนแปลง ปรากฏการณ์ทางธรณีวิทยา และธรณีประวัติ สำหรับนักเรียนระดับชั้นมัธยมศึกษาตอนปลาย และเป็นสื่อที่สามารถช่วยอำนวยความสะดวกต่อผู้พิการทางสายตาได้ด้วย สำหรับทีมนักศึกษาคณไอทีที่คว้ารางวัล ประกอบด้วย นางสาวปวริศา ทองเงิน นางสาวธนาภา ธำรงธัญวงศ์ และนางสาวธนัญญา ธำรงธัญวงศ์ โดยมี ผศ.ดร. ธนิศา นุ่มนนท์ เป็นอาจารย์ที่ปรึกษา</string>
    <string name="namelist">นายปณิธิ สิราคมมาส 58070077 \nนายชนภัทร ผิวคำ 58070024 \nนายนฤเบศ ฮะสม 58070068 \nนายจิตกานต์ แก้วไชยะ 58070012 \nนายคุณัช เลิศจินดาทรัพย์ 58070011 \nนายนครินทร์ คะคังอัมพร 58070066</string>
    <string name="news3detail">นักศึกษาคณะเทคโนโลยีสารสนเทศ สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง ได้รับรางวัลรองชนะเลิศอันดับสองจาก การแข่งขันพัฒนาโปรแกรมคอมพิวเตอร์แห่งประเทศไทย ครั้งที่ 19 : NSC 2017จัดขึ้นโดยศูนย์เทคโนโลยีอิเล็กทรอนิกส์และคอมพิวเตอร์แห่งชาติหรือ NECTEC ซึ่งได้ทำการแข่งขันในรอบชิงชนะเลิศและประกาศผลการแข่งขันไปเมื่อระหว่างวันที่ 15 – 17มีนาคม 2560ที่ผ่านมา ณ ไอส์แลนด์ฮอลล์ ชั้น 3ศูนย์การค้าแฟชั่นไอส์แลนด์ \n
        การแข่งขัน National Software Contest (NSC) มีวัตถุประสงค์เพื่อต้องการกระตุ้นให้นักเรียน นิสิต นักศึกษาได้มีโอกาสพัฒนาทักษะการพัฒนาซอฟต์แวร์และนำเอาความรู้ที่ได้เรียน มาประยุกต์ใช้ในการสร้างสรรค์ผลงาน โดยสนับสนุนเงินทุนเพื่อเป็นแรงจูงใจและกระตุ้นให้นักเรียน นิสิต นักศึกษาทำการพัฒนาซอฟต์แวร์ด้วยตนเองและเปิดโอกาสให้มีการประกวดแข่งขันชิง เงินรางวัลในระดับประเทศ อันจะเป็นการสร้างเวทีสำหรับเยาวชนและผู้ที่สนใจในการพัฒนาความรู้สู่การเป็นนักวิจัยระดับอาชีพต่อไป\n
        ทีมนักศึกษาจากคณะไอทีลาดกระบังได้รับรางวัลรองชนะเลิศอันดับสอง ในหมวดโปรแกรมเพื่อการประยุกต์ใช้งานบนเครือข่ายสำหรับอุปกรณ์คอมพิวเตอร์เคลื่อนที่ (Mobile Application) ระดับนิสิต นักศึกษา กับผลงานที่มีชื่อว่า “ระบบค้นหาตำแหน่งผู้ประสบภัยด้วยสมาร์ทโฟนโดยปราศจากระบบโทรคมนาคม” ในทีม ประกอบด้วยสมาชิกจำนวน 3 คนด้วยกัน คือ นายพัชรพล จอกสมุทร, นายบุญฤทธิ์ พิริย์โยธินกุล และนายชยพล ไชยมงคลนิมิต นักศึกษาจากชั้นปีที่สอง โดยมี ผู้ช่วยศาสตราจารย์ ดร. กิติ์สุชาต พสุภา เป็นอาจารย์ที่ปรึกษา ที่ให้การดูแลและสนับสนุน</string>
    <string name="news5detail">รายเก่า 11-17 กันยายน 2561</string>
    <string name="news4detail">เป็นอีกครั้งกับความสำเร็จอันเกิดจากผลผลิตของคณะเทคโนโลยีสารสนเทศ สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง กับ 2 นักศึกษาไอทีลาดกระบังได้แก่ นาย ไตรศักดิ์ ไตรเสนีย์ ด้วยการคว้ารางวัลชนะเลิศ 1st Prize Winner พ่วงด้วยรางวัล Best Presentation Award มาครอง และนางสาวอมิตา มงคลปรีดาไชย ได้คว้ารางวัล The Best Innovation Award มาครองด้วยเช่นกัน\n\n
        สำหรับการแข่งขันAware Technology Competition Award 2016 นั้น เป็นโครงการที่จัดขึ้นโดย บริษัทอะแวร์คอร์เปอเรชั่นจากัดมีวัตถุประสงค์เพื่อส่งเสริมนักศึกษาให้นำความรู้มาปรับใช้พัฒนาเทคโนโลยีเพื่อให้ก้าวทันโลกในปัจจุบัน สำหรับการแข่งขันในปีนี้ได้จัดไปเมื่อวันที่ 30 พฤษภาคม 2560 โดยได้ทำการประกาศผลผู้ชนะอย่างเป็นทางการเมื่อวันที่28 เมษายน 2560 ณ บริษัท อะแวร์คอร์เปอเรชั่น จำกัด อาคารพหลโยธินเพลส\n\n
        สำหรับผลงานของนาย ไตรศักดิ์ ไตรเสนีย์ ที่ชนะเลิศ 1st Prize Winner และได้รับรางวัล Best Presentation Award นั้นมีชื่อว่า Quickpayซึ่งเป็นผลงานที่ได้แรงบันดาลใจมาจากประสบการณ์สมัยเรียนมัธยมที่ต้องรอคิวซื้อของภายในโรงเรียน จึงได้คิดแอปพลิเคชัน Quickpay ขึ้นมาเพื่อให้ทุกการใช้จ่ายภายในโรงเรียนเป็นเรื่องง่ายชึ้น อีกทั้งผู้ปกครองและฝ่ายการเงินของโรงเรียนยังสามารถบริหาร จัดการและตรวจสอบได้ทุกรายการใช้จ่าย\n\n
        ส่วนผลงานของนางสาวอมิตา มงคลปรีดาไชย ที่ได้รับรางวัล The Best Innovation Awardนั้น มีชื่อว่า SubSendเป็นแอปพลิเคชันที่เพียงแค่กด Subscribe สินค้าที่ต้องการก็จะมีสินค้ามาส่งตามที่ระบุไว้ เช่น ทุกสัปดาห์ ทุกวัน ทุกเดือน ซึ่งช่วยให้ผู้บริโภคสามารถสั่งซื้อสินค้าโดยประหยัดค่าใช้จ่ายและเวลา ทำให้การซื้อของออนไลน์กลายเป็นส่วนหนึ่งในชีวิตประจำวัน\n\n
        ถือได้ว่าเป็นอีกหนึ่งความประสำเร็จจากผลผลิตของคณะไอทีลาดกระบัง ที่แสดงให้เห็นถึงคุณภาพของนักศึกษาคณะ ที่จะจบออกไปประกอบอาชีพในสายไอที</string>
    <string name="news7detail">ประกาศผลการแข่งขันอย่างเป็นทางการไปเรียบร้อยแล้ว กับการแข่งขัน Thailand\'s Network Security Contest 2017การแข่งขันทางด้านเน็ตเวิร์คระดับประเทศที่จัดขึ้น โดยสำนักงานบริหารเทคโนโลยีสารสนเทศเพื่อพัฒนาการศึกษา สำนักงานคณะกรรมการการอุดมศึกษา ร่วมกับ บริษัท จีเอเบิล จำกัด มีวัตถุประสงค์เพื่อส่งเสริมและสนับสนุนให้ นิสิต นักศึกษา ได้รับทราบความก้าวหน้า ความเคลื่อนไหวของ เทคโนโลยีสารสนเทศ และปลูกฝังทัศนคติที่ดีให้นิสิต นักศึกษา รักการเรียนรู้ ใฝ่หาแหล่งข้อมูลความรู้ต่างๆ ในโลกไซเบอร์อินเตอร์เน็ต และเป็นเวทีระดับประเทศที่ให้โอกาส นิสิต นักศึกษา ในยุคสารสนเทศได้แสดงความสามารถในทางสร้างสรรค์ โดยนำเอาเทคโนโลยีสารสนเทศมาพัฒนาหรือประยุกต์ใช้อย่างถูกต้องเหมาะสมและคำนึงถึงเรื่องของจรรยาบรรณเป็นสำคัญ นอกจากนี้ยังถือเป็นการสร้างแรงจูงใจในการใฝ่รู้ให้แก่เยาวชนเพื่อเข้าถึงข้อมูลสารสนเทศต่างๆ อันจะเป็นหนทางนำไปสู่ความใฝ่รู้ และความสนใจในสิ่งแวดล้อมรอบตัวอีกด้วย สำหรับงานในปีนี้ได้ทำการแข่งขันรอบสุดท้ายและประกาศผลอย่างเป็นทางการไปเมื่อวันที่ 31 มีนาคม 2560 ณ The Berkeley Hotel Pratunam \n\n
        นายธรรศ แสงสมเรือง นักศึกษาคณะเทคโนโลยีสารสนเทศ สจล. ร่วมกับ นายเมธาสิทธิ์ รินทร และ นายพงศ์พล ไผ่อรุณรัตน์ นักศึกษาจากคณะวิศวกรรมศาสตร์ สจล. ภายใต้ทีมที่มีชื่อว่า “555plus” ได้รับรางวัลชมเชย พร้อมทุนการศึกษา 10,000 บาท</string>
    <string name="news7Content">รางวัลชมเชย Thailand\'s Network Security Contest 2017</string>

    <string name="event1">สถานีคนเดิน</string>
    <string name="event_detail">วันพรุ่งนี้สถานีคนเดินพระจอมเกล้าลาดกระบัง กลับมาเปิดทำการตามปกติแล้ว\n\nหลังจากผ่านช่วงการสอบกลางภาคไป โดยในเดือนนี้จะเปิดทำการในวันที่ 5 และ 19 ตุลาคมเท่านั้น</string>
    <string name="event_date">วันพฤหัสบดี 15.00 - 21.00</string>
    <string name="event_location">ณ สนามกีฬาพระจอม</string>
    <string name="more_event">More Event Soon</string>

</resources>
