<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kmitl.lab05.topusenpai.newkmitlapp.Fragment.ShowEventFragment"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/event_location"
            android:textColor="#000"
            android:textSize="20dp"
            android:gravity="center"
            android:id="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/event1"
            android:textColor="#000"
            android:textSize="25dp"
            android:gravity="center"
            android:id="@+id/textView4"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginTop="0dp"
            app:layout_constraintVertical_bias="0.19999999" />

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/event_date"
            android:textColor="#000"
            android:textSize="20dp"
            android:gravity="center"
            android:id="@+id/textView2"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="363dp"
            android:layout_height="191dp"
            android:layout_weight="1"
            android:text="@string/event_detail"
            android:textColor="#000"
            android:textSize="20dp"
            android:id="@+id/textView3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="255dp"
            android:layout_height="143dp"
            app:srcCompat="@drawable/eventimg"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.506" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>