<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context="kmitl.lab05.topusenpai.newkmitlapp.Fragment.FeedFragment">

    <!-- TODO: Update blank fragment layout -->


    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:weightSum="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/news1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:weightSum="7">

                        <ImageView
                            android:id="@+id/news1Img"
                            android:layout_width="0dp"
                            android:layout_height="75dp"
                            android:layout_weight="3"
                            app:srcCompat="@drawable/kmitl" />

                        <TextView
                            android:id="@+id/news1Text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="4"
                            android:text="@string/_2561" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/news2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:weightSum="7">

                        <ImageView
                            android:id="@+id/news2Img"
                            android:layout_width="0dp"
                            android:layout_height="75dp"
                            android:layout_weight="3"
                            app:srcCompat="@drawable/news2" />

                        <TextView
                            android:id="@+id/news2Text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="4"
                            android:text="@string/textNews2" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/news6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:weightSum="7">

                        <ImageView
                            android:id="@+id/news6Img"
                            android:layout_width="0dp"
                            android:layout_height="75dp"
                            android:layout_weight="3"
                            app:srcCompat="@drawable/kmitl" />

                        <TextView
                            android:id="@+id/news6Text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="4"
                            android:text="@string/news6Content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/news3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:weightSum="7">

                        <ImageView
                            android:id="@+id/news3Img"
                            android:layout_width="0dp"
                            android:layout_height="75dp"
                            android:layout_weight="3"
                            app:srcCompat="@drawable/news3" />

                        <TextView
                            android:id="@+id/news3Text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="4"
                            android:text="@string/national_software_contest_2017" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/news5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:weightSum="7">

                        <ImageView
                            android:id="@+id/news5Img"
                            android:layout_width="0dp"
                            android:layout_height="75dp"
                            android:layout_weight="3"
                            app:srcCompat="@drawable/kmitl" />

                        <TextView
                            android:id="@+id/news5Text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="4"
                            android:text="@string/news5Content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/news4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:weightSum="7">

                        <ImageView
                            android:id="@+id/news4Img"
                            android:layout_width="0dp"
                            android:layout_height="75dp"
                            android:layout_weight="3"
                            app:srcCompat="@drawable/news4" />

                        <TextView
                            android:id="@+id/news4Text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="4"
                            android:text="@string/_1st_prize_winner_aware_technology_competition_award_2016" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/news7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:orientation="horizontal"
                        android:weightSum="7">

                        <ImageView
                            android:id="@+id/news7Img"
                            android:layout_width="0dp"
                            android:layout_height="75dp"
                            android:layout_weight="3"
                            app:srcCompat="@drawable/news7" />

                        <TextView
                            android:id="@+id/news7Text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="4"
                            android:text="@string/news7Content" />
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</FrameLayout>
