<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kmitl.lab05.topusenpai.newkmitlapp.Fragment.EventFragment"
    android:layout_marginTop="0dp">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/event1"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="89dp"
            android:clickable="true"
            >

            <android.support.constraint.ConstraintLayout
                android:id="@+id/event"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/eventView"
                    android:layout_width="0dp"
                    android:layout_height="144dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="#dfdfdf"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/eventLocation"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:text="@string/event_location"
                    android:textColor="#000"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/eventDate"
                    app:layout_constraintLeft_toRightOf="@+id/imageEvent"
                    app:layout_constraintTop_toBottomOf="@+id/eventInfo" />

                <TextView
                    android:id="@+id/eventInfo"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:text="@string/event1"
                    android:textColor="#000"
                    android:textSize="25dp"
                    app:layout_constraintBottom_toTopOf="@+id/eventLocation"
                    app:layout_constraintLeft_toRightOf="@+id/imageEvent"
                    app:layout_constraintTop_toTopOf="@+id/eventView"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:text="@string/event_date"
                    android:textColor="#000"
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="@+id/eventView"
                    app:layout_constraintLeft_toRightOf="@+id/imageEvent"
                    app:layout_constraintTop_toBottomOf="@+id/eventLocation" />

                <ImageView
                    android:id="@+id/imageEvent"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toBottomOf="@+id/eventView"
                    app:layout_constraintLeft_toLeftOf="@+id/eventView"
                    app:layout_constraintTop_toTopOf="@+id/eventView"
                    app:srcCompat="@mipmap/walking" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/event2"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="81dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/eventView2"
                    android:layout_width="0dp"
                    android:layout_height="144dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="#dfdfdf"
                    android:gravity="center"
                    android:text="@string/more_event"
                    android:textColor="#000"
                    android:textSize="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
